--- a/lib/index.html
+++ b/lib/index.html
@@ -12,6 +12,9 @@
     <div class="marquee">轮播图</div>
     <div class="tab">tabs标签页</div>
 
+    <div class="iconfont icon-qq"></div>
+    <div class="iconfont icon-weixin"></div>
+
     <!-- <script src="../lib/webpack-dome.js"></script> -->
 </body>
 
